--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -43,20 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractGameAsset.cs" />
-    <Compile Include="AbstractMap.cs" />
-    <Compile Include="AbstractObject.cs" />
-    <Compile Include="AbstractPlayer.cs" />
     <Compile Include="Chest.cs" />
+    <Compile Include="GameAsset.cs" />
     <Compile Include="ILeaveable.cs" />
     <Compile Include="IMoveabel.cs" />
     <Compile Include="IOpenable.cs" />
     <Compile Include="IPassable.cs" />
+    <Compile Include="DungeonTile.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="Door.cs" />
     <Compile Include="Exit.cs" />
     <Compile Include="Floor.cs" />
     <Compile Include="Loot.cs" />
+    <Compile Include="Object.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
