--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IOpenable.cs" />
     <Compile Include="IPassable.cs" />
     <Compile Include="DungeonTile.cs" />
+    <Compile Include="IScorable.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="Door.cs" />
     <Compile Include="Exit.cs" />
