Introduces the MovementLogic class. This class contains a method called "CheckNextMove", which receives an input (movement direction) from the player. It then uses the current position of the player, in order to investigate whether the tile which the player desires to move to next, is “passable”.

--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Boundary.cs" />
     <Compile Include="Chest.cs" />
     <Compile Include="GameAsset.cs" />
+    <Compile Include="GameState.cs" />
     <Compile Include="Iinteractable.cs" />
     <Compile Include="DungeonTile.cs" />
     <Compile Include="LevelEditor.cs" />
@@ -55,6 +56,8 @@
     <Compile Include="Floor.cs" />
     <Compile Include="Loot.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="Movement.cs" />
+    <Compile Include="MovementLogic.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
