--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GameState.cs" />
     <Compile Include="Iinteractable.cs" />
     <Compile Include="DungeonTile.cs" />
+    <Compile Include="Key.cs" />
     <Compile Include="LevelEditor.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="Door.cs" />
