Making the movement logics workable. Player can now move around the map. Possible to kill monsters.

--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -60,7 +60,7 @@
     <Compile Include="IInteractable.cs" />
     <Compile Include="DungeonTile.cs" />
     <Compile Include="LoadingState.cs" />
-    <Compile Include="Gameworld.cs" />
+    <Compile Include="GameWorld.cs" />
     <Compile Include="MapLogic.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="Door.cs" />
@@ -68,12 +68,13 @@
     <Compile Include="Floor.cs" />
     <Compile Include="Loot.cs" />
     <Compile Include="GameObject.cs" />
-    <Compile Include="Movement.cs" />
+    <Compile Include="MovementInput.cs" />
     <Compile Include="MovementLogic.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateMachine.cs" />
+    <Compile Include="TargetPosition.cs" />
     <Compile Include="Wall.cs" />
   </ItemGroup>
   <ItemGroup>
