Check input method:
Class:movement(name will be changed)
How: A do-while loop take in plyayer input.
loop variable is false by default.
if input is illegal, loop variable is set to true(loops again)
otherwise is returns the entered direction.

--------------------

Use key method:

includes the have key method;
if have key returns true=>removes one key from inventory
else=> prints an error message

--------------------

Have key method:

chekcks if the key exists in inventory;
if yes=> returns true
else=> returns false

--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GameSession.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="GameOverState.cs" />
+    <Compile Include="Inventory.cs" />
     <Compile Include="MenuState.cs" />
     <Compile Include="PlayingGameState.cs" />
     <Compile Include="GameAsset.cs" />
