- door: Done!!!!!  takes in player  checks for door type  checks for key  if: has key=> remove key=>door.passable  else: erroe message: no key, get one!
 -Sword:Loot: prime Done!!!
 - has  color, and coordinates
 - adds to inventory, replaces the old one.

--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GameState.cs" />
     <Compile Include="GameOverState.cs" />
     <Compile Include="GoldKey.cs" />
+    <Compile Include="HealthPotion.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="BronzeKey.cs" />
     <Compile Include="MenuState.cs" />
@@ -72,7 +73,7 @@
     <Compile Include="Floor.cs" />
     <Compile Include="Loot.cs" />
     <Compile Include="GameObject.cs" />
-    <Compile Include="MovementInput.cs" />
+    <Compile Include="PlayerInput.cs" />
     <Compile Include="MovementLogic.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
