fixing exit and swords

--- a/Laboration 4/Laboration 4.csproj
+++ b/Laboration 4/Laboration 4.csproj
@@ -80,6 +80,7 @@
     <Compile Include="StateMachine.cs" />
     <Compile Include="Sword.cs" />
     <Compile Include="TargetPosition.cs" />
+    <Compile Include="TheHolyGrail.cs" />
     <Compile Include="Wall.cs" />
   </ItemGroup>
   <ItemGroup>
